labs-prioritycommerce/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labs-prioritycommerce
  namespace: labs
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: ACM_CERT_ARN  # arn:aws:acm:<region>:<account>:certificate/<id>
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - host: labs.prioritycommerce.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: labs-prioritycommerce
                port:
                  number: 80
